page edit correction

--- a/neu/webdev/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-edit.view.client.html
@@ -33,8 +33,8 @@
         </div>
 
         <div class="col-xs-12 visible-xs">
-            <div class="#/user/{{model.userId}}/website/{{model.websiteId}}/page">
-                <a href="page-list.view.client.html" class="white_navbar navbar-link">
+            <div class="navbar-text pull-left">
+                <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page" class="white_navbar navbar-link">
 					  <span class="glyphicon glyphicon-chevron-left">
 					  </span>
                 </a>
