--- a/neu/webdev/public/assignment/views/page/templates/page-new.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-new.view.client.html
@@ -19,7 +19,6 @@
             </div>
         </div>
 
-
         <div class="col-sm-8 hidden-xs">
             <a class="navbar-brand">
                 <label>New page</label>
@@ -35,7 +34,7 @@
 
         <div class="col-xs-12 visible-xs">
             <div class="navbar-text pull-left">
-                <a href="#/user/{{model.userId}}/website/{{vm.websiteId}}/page" class="white_navbar navbar-link">
+                <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page" class="white_navbar navbar-link">
 					  <span class="glyphicon glyphicon-chevron-left">
 					  </span>
                 </a>
