--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -18,35 +18,34 @@
     </div>
 </nav>
 
-
-
 <div class="top-padding"></div>
 
 <div class="container-fluid">
-    <div  ng-repeat="widget in model.widgets">
-       <div ng-switch="widget.widgetType">
-           <div class="jga-toolbar">
-               <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
-                   <span class="glyphicon glyphicon-cog"></span>
-               </a>
-               <span class="glyphicon glyphicon-align-justify"></span>
-           </div>
-           <div ng-switch-when="HEADER">
-               <ng-include src="'views/widget/templates/widget-header.view.client.html'"></ng-include>
-           </div>
-           <div ng-switch-when="IMAGE">
-               <ng-include src="'views/widget/templates/widget-image.view.client.html'"></ng-include>
-           </div>
-           <div ng-switch-when="HTML">
-               <ng-include src="'views/widget/templates/widget-html.view.client.html'"></ng-include>
-           </div>
-           <div ng-switch-when="YOUTUBE" class="embed-responsive embed-responsive-16by9">
-               <ng-include src="'views/widget/templates/widget-youtube.view.client.html'"></ng-include>
-           </div>
-       </div>
+    <div class="widget-list" wbdv-sortable="">
+        <div  ng-repeat="widget in model.widgets">
+            <div ng-switch="widget.widgetType">
+                <div class="jga-toolbar">
+                    <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
+                        <span class="glyphicon glyphicon-cog"></span>
+                    </a>
+                    <span class="glyphicon glyphicon-align-justify"></span>
+                </div>
+                <div ng-switch-when="HEADER">
+                    <ng-include src="'views/widget/templates/widget-header.view.client.html'"></ng-include>
+                </div>
+                <div ng-switch-when="IMAGE">
+                    <ng-include src="'views/widget/templates/widget-image.view.client.html'"></ng-include>
+                </div>
+                <div ng-switch-when="HTML">
+                    <ng-include src="'views/widget/templates/widget-html.view.client.html'"></ng-include>
+                </div>
+                <div ng-switch-when="YOUTUBE" class="embed-responsive embed-responsive-16by9">
+                    <ng-include src="'views/widget/templates/widget-youtube.view.client.html'"></ng-include>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-
 <div class="bottom-padding"></div>
 
 </div>
