--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
@@ -33,11 +33,14 @@
                placeholder="Image Width">
     </div>
 
-    <form class="form-group" action="/api/upload"  method="post" enctype="multipart/form-data">
+    <form id="upload-form" class="form-group" action="/api/upload"  method="post" enctype="multipart/form-data">
         <input  name="myFile"   type="file" class="form-control"/>
         <input  name="width"    value="{{model.widget.width}}" style="display: none"/>
         <input  name="widgetId" value="{{model.widget._id}}"   style="display: none"/>
-        <button  type="submit"   class="btn btn-block btn-primary form-control">Upload Image</button>
+        <input  name="userId" value="{{model.userId}}"   style="display: none"/>
+        <input  name="pageId" value="{{model.pageId}}"   style="display: none"/>
+        <input  name="websiteId" value="{{model.websiteId}}"   style="display: none"/>
+        <button  type="submit" class="btn btn-block btn-primary form-control">Upload Image</button>
     </form>
     <div class="bottom-padding">
         <a ng-click="model.deleteWidget()" class="btn btn-danger form-control">Delete</a>
