--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -21,8 +21,8 @@
 <div class="top-padding"></div>
 
 <div class="container-fluid">
-    <div class="widget-list" wbdv-sortable="">
-        <div  ng-repeat="widget in model.widgets">
+    <div wbdv-sortable>
+        <div  ng-repeat="widget in model.widgets" id = "{{widget._id}}">
             <div ng-switch="widget.widgetType">
                 <div class="jga-toolbar">
                     <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
@@ -42,6 +42,7 @@
                 <div ng-switch-when="YOUTUBE" class="embed-responsive embed-responsive-16by9">
                     <ng-include src="'views/widget/templates/widget-youtube.view.client.html'"></ng-include>
                 </div>
+                </li>
             </div>
         </div>
     </div>
