--- a/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
@@ -43,6 +43,10 @@
             </div>
         </form>
 
+        <a class="btn btn-warning btn-block" ng-click="model.deleteUser(model.user)">
+            Delete
+        </a>
+
         <a class="btn btn-primary btn-block"
            href="#/user/{{model.userId}}/website">Websites</a>
 
