--- a/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -19,7 +19,7 @@
 </nav>
 
 
-<div class="container-fluid" ng-switch="model.widget.widgetType">
+<div class="container-fluid" ng-switch="model.widget.type">
     <div ng-switch-when="HEADER">
         <ng-include src="'views/widget/templates/editors/widget-header.view.client.html'"></ng-include>
     </div>
