--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -39,7 +39,7 @@
                 <div ng-switch-when="HTML">
                     <ng-include src="'views/widget/templates/widget-html.view.client.html'"></ng-include>
                 </div>
-                <div ng-switch-when="YOUTUBE" class="embed-responsive embed-responsive-16by9">
+                <div ng-switch-when="YOUTUBE" class="youtube-widget embed-responsive embed-responsive-16by9">
                     <ng-include src="'views/widget/templates/widget-youtube.view.client.html'"></ng-include>
                 </div>
                 </li>
