--- a/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -29,6 +29,9 @@
     <div ng-switch-when="YOUTUBE">
         <ng-include src="'views/widget/templates/editors/widget-youtube.view.client.html'"></ng-include>
     </div>
+    <div ng-switch-when="TEXT">
+        <ng-include src="'views/widget/templates/editors/widget-text.view.client.html'"></ng-include>
+    </div>
 </div>
 
 
