--- a/neu/webdev/public/assignment/views/widget/templates/widget-chooser.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-chooser.view.client.html
@@ -24,7 +24,7 @@
             <a>HTML</a>
         </li>
         <li class="list-group-item">
-            <a>Text Input</a>
+            <a ng-click="model.newTextWidget()" href="">Text Input</a>
         </li>
         <li class="list-group-item">
             <a>Link</a>
