--- a/neu/webdev/public/assignment/views/widget/templates/widget-chooser.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-chooser.view.client.html
@@ -21,7 +21,7 @@
             <a>Label</a>
         </li>
         <li class="list-group-item">
-            <a>HTML</a>
+            <a ng-click="model.newHTMLWidget()" href="">HTML</a>
         </li>
         <li class="list-group-item">
             <a ng-click="model.newTextWidget()" href="">Text Input</a>
