--- a/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -32,6 +32,9 @@
     <div ng-switch-when="TEXT">
         <ng-include src="'views/widget/templates/editors/widget-text.view.client.html'"></ng-include>
     </div>
+    <div ng-switch-when="HTML">
+        <ng-include src="'views/widget/templates/editors/widget-html.view.client.html'"></ng-include>
+    </div>
 </div>
 
 
