Header to heading

--- a/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -20,7 +20,7 @@
 
 
 <div class="container-fluid" ng-switch="model.widget.type">
-    <div ng-switch-when="HEADER">
+    <div ng-switch-when="HEADING">
         <ng-include src="'views/widget/templates/editors/widget-header.view.client.html'"></ng-include>
     </div>
     <div ng-switch-when="IMAGE">
