--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -30,7 +30,7 @@
                     </a>
                     <span class="glyphicon glyphicon-align-justify"></span>
                 </div>
-                <div ng-switch-when="HEADER">
+                <div ng-switch-when="HEADING">
                     <ng-include src="'views/widget/templates/widget-header.view.client.html'"></ng-include>
                 </div>
                 <div ng-switch-when="IMAGE">
