--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
@@ -5,7 +5,7 @@
                id="widget-edit-name"
                class="form-control"
                type="text"
-               placeholder="Header Name">
+               placeholder="Heading Name">
     </div>
     <div class="form-group">
         <label for="widget-edit-text" class="form-control-label">Text</label>
@@ -13,7 +13,7 @@
                id="widget-edit-text"
                class="form-control"
                type="text"
-               placeholder="Header text">
+               placeholder="Heading text">
     </div>
     <div class="form-group">
         <label for="widget-heading-widget-size">Size</label>
