Widget Header name

--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-text.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-text.view.client.html
@@ -1,7 +1,9 @@
 <div class="container-fluid bottom-padding top-padding">
     <div class="form-group">
+        Name
+        <input ng-model="model.widget.name" class="form-control" placeholder="Widget name"/>
         Text
-        <input ng-model="model.widget.text" class="form-control" placeholder="Text"/>
+        <input ng-model="model.widget.text" class="form-control" placeholder="Widget Text"/>
         Rows
         <input ng-model="model.widget.rows" class="form-control" type="number" placeholder="Number of rows"/>
         Placeholder
