--- a/neu/webdev/public/assignment/views/widget/templates/widget-youtube.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-youtube.view.client.html
@@ -1,3 +1,3 @@
-<div >
-    <iframe class="embed-responsive-item" ng-src="{{model.doYouTrust(widget.url)}}"></iframe>
+<div class="youtube-widget">
+    <iframe ng-src="{{model.doYouTrust(widget.url)}}"></iframe>
 </div>
