Data type changed from text to input

--- a/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -29,7 +29,7 @@
     <div ng-switch-when="YOUTUBE">
         <ng-include src="'views/widget/templates/editors/widget-youtube.view.client.html'"></ng-include>
     </div>
-    <div ng-switch-when="TEXT">
+    <div ng-switch-when="INPUT">
         <ng-include src="'views/widget/templates/editors/widget-text.view.client.html'"></ng-include>
     </div>
     <div ng-switch-when="HTML">
