--- a/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -42,7 +42,7 @@
                 <div ng-switch-when="YOUTUBE" class="youtube-widget embed-responsive embed-responsive-16by9">
                     <ng-include src="'views/widget/templates/widget-youtube.view.client.html'"></ng-include>
                 </div>
-                <div ng-switch-when="TEXT">
+                <div ng-switch-when="INPUT">
                     <ng-include src="'views/widget/templates/widget-text.view.client.html'"></ng-include>
                 </div>
                 </li>
