Passport Authentication Implementation

--- a/neu/webdev/public/assignment/views/user/templates/register.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/register.view.client.html
@@ -26,7 +26,7 @@
         <a class="btn btn-primary btn-block"
            ng-click="model.register()">Register</a>
         <a class="btn btn-danger  btn-block"
-           href="#/login">Cancel</a>
+           href="model.logout()">Cancel</a>
     </div>
 
 
