--- a/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/profile.view.client.html
@@ -51,7 +51,7 @@
            href="#/user/{{model.userId}}/website">Websites</a>
 
         <a class="btn btn-danger  btn-block"
-           href="#/login">Logout</a>
+           ng-click="model.logout()">Logout</a>
         <div class="bottom-padding"></div>
     </div>
 
