--- a/neu/webdev/public/assignment/views/user/templates/login.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/login.view.client.html
@@ -21,8 +21,8 @@
          <a class="btn btn-primary btn-block"
             ng-click="model.login(user)">Login</a>
          <a class="btn btn-success btn-block" href='#/register'>Register</a>
-         <a href="/auth/google" class="btn btn-danger btn-block">
-             <span class="fa fa-google-plus"></span>
-             Google
+         <a href="/auth/facebook" class="btn btn-primary btn-block">
+             <span class="fa fa-facebook"></span>
+             Facebook
          </a>
 </div>
