Forma validation for login and register

--- a/neu/webdev/public/assignment/css/styles.css
+++ b/neu/webdev/public/assignment/css/styles.css
@@ -19,6 +19,15 @@ body {
     color: #777;
 }
 
+.error{
+     color: #ff6929;
+     margin: 10px;
+ }
+
+.ng-submitted .ng-invalid{
+     background-color : #ebebeb;
+ }
+
 .blue-nav {
     color: #337ab7;
 }
