--- a/neu/webdev/public/assignment/views/user/templates/login.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/login.view.client.html
@@ -9,20 +9,27 @@
                  {{model.message}}
          </div>
 
-
-         <input  ng-model="user.username"
-                 type="text"
-                 class="form-control"
-                 placeholder="username"/>
-         <input  ng-model="user.password"
-                 type="password"
-                 class="form-control"
-                 placeholder="password"/>
-         <a class="btn btn-primary btn-block"
-            ng-click="model.login(user)">Login</a>
-         <a class="btn btn-success btn-block" href='#/register'>Register</a>
-         <a href="/auth/facebook" class="btn btn-primary btn-block">
-             <span class="fa fa-facebook"></span>
-             Facebook
-         </a>
+     <form name="form" ng-submit="model.login(model.user)" novalidate>
+         <input name="username" ng-model="model.user.username"
+                type="text"
+                class="form-control"
+                placeholder="username" required/>
+         <div class="error" ng-show="form.username.$invalid && form.$submitted">
+             Username is required
+         </div>
+         <div class="form-group">
+             <div class="form-group">
+                 <input  name="password" ng-model="model.user.password" type="password"  class="form-control" id="inputPassword" placeholder="Password" required>
+             </div>
+             <div class="error" ng-show="form.password.$invalid && form.$submitted">
+                 Password is required
+             </div>
+             <button type="submit"  class="btn btn-primary btn-block">Login</button>
+             <a class="btn btn-success btn-block" href='#/register'>Register</a>
+             <a href="/auth/facebook" class="btn btn-primary btn-block">
+                 <span class="fa fa-facebook"></span>
+                 Facebook
+             </a>
+         </div>
+     </form>
 </div>
