--- a/neu/webdev/public/assignment/views/user/templates/register.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/register.view.client.html
@@ -8,26 +8,37 @@
         <div ng-show="model.message" class="alert alert-info">
             {{model.message}}
         </div>
-
-        <input  ng-model="model.user.username"
-                type="text"
-               class="form-control"
-               placeholder="username"/>
-
-        <input  ng-model="model.user.password"
-                type="password"
-               class="form-control"
-               placeholder="password"/>
-
-        <input type="password"
-               class="form-control"
-               placeholder="verify password"/>
-
-        <a class="btn btn-primary btn-block"
-           ng-click="model.register()">Register</a>
-        <a class="btn btn-danger  btn-block"
-           href="model.logout()">Cancel</a>
+        <form name="form" ng-submit="model.register(model.user)" novalidate>
+            <input name="username" ng-model="model.user.username"
+                    type="text"
+                   class="form-control"
+                   placeholder="username" required/>
+            <div class="error" ng-show="form.username.$invalid && form.$submitted">
+                Username is required
+            </div>
+            <div class="form-group">
+                    <div class="form-group">
+                        <input  name="password" ng-model="model.user.password" type="password"  class="form-control" id="inputPassword" placeholder="Password" required>
+                    </div>
+                    <div class="error" ng-show="form.password.$invalid && form.$submitted">
+                        Password is required
+                    </div>
+                    <div class="form-group">
+                        <input  name="verifypassword" ng-model="model.user.verifypassword" type="password"  class="form-control"  placeholder="Confirm Password" required>
+                    </div>
+                    <div class="error" ng-show="form.verifypassword.$invalid && form.$submitted">
+                        Confirm Password is required
+                    </div>
+                    <div ng-show="model.passwordError" class="alert alert-danger">
+                        {{model.passwordError}}
+                    </div>
+                    <button type="submit"  class="btn btn-primary btn-block">Register</button>
+            </div>
+            <a class="btn btn-danger  btn-block"
+               href="model.logout()">Cancel</a>
+        </form>
     </div>
+
 
 
 </body>
