--- a/neu/webdev/public/assignment/views/user/templates/login.view.client.html
+++ b/neu/webdev/public/assignment/views/user/templates/login.view.client.html
@@ -1,35 +1,43 @@
- <div class="container">
-        <h1>Login</h1>
+<div class="container">
+    <h1>Login</h1>
 
-         <div ng-show="model.error" class="alert alert-danger">
-                 {{model.error}}
-         </div>
+    <div ng-show="model.error" class="alert alert-danger">
+        {{model.error}}
+    </div>
 
-         <div ng-show="model.message" class="alert alert-info">
-                 {{model.message}}
-         </div>
+    <div ng-show="model.message" class="alert alert-info">
+        {{model.message}}
+    </div>
 
-     <form name="form" ng-submit="model.login(model.user)" novalidate>
-         <input name="username" ng-model="model.user.username"
-                type="text"
-                class="form-control"
-                placeholder="username" required/>
-         <div class="error" ng-show="form.username.$invalid && form.$submitted">
-             Username is required
-         </div>
-         <div class="form-group">
-             <div class="form-group">
-                 <input  name="password" ng-model="model.user.password" type="password"  class="form-control" id="inputPassword" placeholder="Password" required>
-             </div>
-             <div class="error" ng-show="form.password.$invalid && form.$submitted">
-                 Password is required
-             </div>
-             <button type="submit"  class="btn btn-primary btn-block">Login</button>
-             <a class="btn btn-success btn-block" href='#/register'>Register</a>
-             <a href="/auth/facebook" class="btn btn-primary btn-block">
-                 <span class="fa fa-facebook"></span>
-                 Facebook
-             </a>
-         </div>
-     </form>
+    <div ng-show="form.$invalid && form.$submitted" class="alert alert-danger">
+        Please fix below errors
+        <ul>
+            <li ng-show="form.username.$invalid && form.$submitted">Username is required</li>
+            <li ng-show="form.password.$invalid && form.$submitted">Password is required</li>
+        </ul>
+    </div>
+
+    <form name="form" ng-submit="model.login(model.user)" novalidate>
+        <input name="username" ng-model="model.user.username"
+               type="text"
+               class="form-control"
+               placeholder="username" required/>
+        <div class="error" ng-show="form.username.$invalid && form.$submitted">
+            Username is required
+        </div>
+        <div class="form-group">
+            <div class="form-group">
+                <input  name="password" ng-model="model.user.password" type="password"  class="form-control" id="inputPassword" placeholder="Password" required>
+            </div>
+            <div class="error" ng-show="form.password.$invalid && form.$submitted">
+                Password is required
+            </div>
+            <button type="submit"  class="btn btn-primary btn-block">Login</button>
+            <a class="btn btn-success btn-block" href='#/register'>Register</a>
+            <a href="/auth/facebook" class="btn btn-primary btn-block">
+                <span class="fa fa-facebook"></span>
+                Facebook
+            </a>
+        </div>
+    </form>
 </div>
