--- a/neu/webdev/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/neu/webdev/public/assignment/views/page/templates/page-edit.view.client.html
@@ -25,7 +25,7 @@
             </a>
 
             <div class="navbar-text pull-right">
-                <a href="" ng-click="model.updatePage()" class="navbar-link">
+                <a href="" ng-click="form.$submitted=true; model.updatePage()" class="navbar-link">
 					  <span class="glyphicon glyphicon-ok">
 					  </span>
                 </a>
@@ -43,7 +43,7 @@
                 <label>Edit Page</label>
             </a>
             <div class="navbar-text pull-right">
-                <div ng-click="model.updatePage()" class="navbar-link">
+                <div ng-click="form.$submitted=true; model.updatePage()" class="navbar-link">
 					  <span class="glyphicon glyphicon-ok">
 					  </span>
                 </div>
@@ -73,14 +73,24 @@
 
 
     <div class="col-sm-8 col-xs-12 wbdv-right-pane">
-        <div class="top-padding form-group">
-            <label for="page-edit-web-name" class="form-control-label">Name</label>
-            <input ng-model="model.page.name"
-                   placeholder="Page Name"
-                   id="page-edit-web-name"
-                   class="form-control"
-                   type="text"
-                   value="Blog Post">
+        <div ng-show="form.$invalid && form.$submitted" class="alert alert-danger">
+            Please fix below errors
+            <ul>
+                <li ng-show="form.name.$invalid && form.$submitted">Page name is required</li>
+            </ul>
+        </div>
+        <div class="top-padding">
+            <form name="form" novalidate>
+                <label for="page-edit-page-name" class="form-control-label">Name</label>
+                <input name="name" ng-model="model.page.name"
+                       placeholder="Page Name"
+                       id="page-edit-page-name"
+                       class="form-control"
+                       type="text" required>
+                <div class="error" ng-show="form.name.$invalid && form.$submitted">
+                    Name is required
+                </div>
+            </form>
         </div>
         <div class="form-group">
             <label for="page-edit-web-title" class="form-control-label">Title</label>
