--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-header.view.client.html
@@ -1,11 +1,21 @@
 <div class="container-fluid bottom-padding">
-    <div class="top-padding form-group">
+
+    <div class="top-padding">
+        <div ng-show="model.nameError" class="alert alert-danger">
+            Please fix below errors:
+            <ul>
+                <li ng-show="model.nameError">Name is required</li>
+            </ul>
+        </div>
         <label for="widget-edit-name" class="form-control-label">Name</label>
         <input ng-model="model.widget.name"
                id="widget-edit-name"
                class="form-control"
                type="text"
                placeholder="Heading Name">
+            <div ng-show="model.nameError" class="alert alert-danger">
+                {{model.nameError}}
+            </div>
     </div>
     <div class="form-group">
         <label for="widget-edit-text" class="form-control-label">Text</label>
