--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-html.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-html.view.client.html
@@ -1,7 +1,16 @@
 <div class="container-fluid bottom-padding top-padding">
+    <div ng-show="model.nameError" class="alert alert-danger">
+        Please fix below errors:
+        <ul>
+            <li ng-show="model.nameError">Name is required</li>
+        </ul>
+    </div>
     <div class="form-group">
         Name
         <input ng-model="model.widget.name" class="form-control" placeholder="Widget Name"/>
+        <div ng-show="model.nameError" class="alert alert-danger">
+            {{model.nameError}}
+        </div>
         HTML
         <div ng-model="model.widget.text" text-angular ta-toolbar="[['h1','h2','h3'],['bold','italics','underline','strikeThrough'],
             ['ul','ol'],['justifyLeft','justifyCenter','justifyRight','justifyFull'],
