--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-image.view.client.html
@@ -1,5 +1,11 @@
 <div class="top-padding"></div>
 <div class="container-fluid">
+    <div ng-show="model.nameError" class="alert alert-danger">
+        Please fix below errors:
+        <ul>
+            <li ng-show="model.nameError">Name is required</li>
+        </ul>
+    </div>
     <div class="form-group">
         <label for="widget-image-name" class="form-control-label">Name</label>
         <input ng-model="model.widget.name"
@@ -7,6 +13,9 @@
                class="form-control"
                type="text"
                placeholder="Image Name">
+        <div ng-show="model.nameError" class="alert alert-danger">
+            {{model.nameError}}
+        </div>
     </div>
     <div class="form-group">
         <label for="widget-image-text" class="form-control-label">Text</label>
