--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-text.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-text.view.client.html
@@ -1,7 +1,16 @@
 <div class="container-fluid bottom-padding top-padding">
+    <div ng-show="model.nameError" class="alert alert-danger">
+        Please fix below errors:
+        <ul>
+            <li ng-show="model.nameError">Name is required</li>
+        </ul>
+    </div>
     <div class="form-group">
         Name
         <input ng-model="model.widget.name" class="form-control" placeholder="Widget name"/>
+        <div ng-show="model.nameError" class="alert alert-danger">
+            {{model.nameError}}
+        </div>
         Text
         <input ng-model="model.widget.text" class="form-control" placeholder="Widget Text"/>
         Rows
