--- a/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
+++ b/neu/webdev/public/assignment/views/widget/templates/editors/widget-youtube.view.client.html
@@ -1,11 +1,20 @@
 <div class="container-fluid">
     <div class="top-padding form-group">
+        <div ng-show="model.nameError" class="alert alert-danger">
+            Please fix below errors:
+            <ul>
+                <li ng-show="model.nameError">Name is required</li>
+            </ul>
+        </div>
         <label for="widget-image-name" class="form-control-label">Name</label>
         <input ng-model="model.widget.name"
                id="widget-image-name"
                class="form-control"
                type="text"
                placeholder="Video Name">
+        <div ng-show="model.nameError" class="alert alert-danger">
+            {{model.nameError}}
+        </div>
     </div>
     <div class="form-group">
         <label for="widget-youtube-text" class="form-control-label">Text</label>
